[package]
name = "featomic"
version = "0.1.0"
authors = ["Guillaume Fraux <guillaume.fraux@epfl.ch>"]
edition = "2021"
rust-version = "1.74"

[lib]
bench = false

[dependencies]
metatensor = {version = "0.2", features = ["rayon"]}

ndarray = {version = "0.16", features = ["rayon", "serde", "approx"]}
num-traits = "0.2"
rayon = "1.5"

log = "0.4"
once_cell = "1"
indexmap = "2"
thread_local = "1.1"
time-graph = "0.3.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "=1.0.0-alpha.15"

chemfiles = {version = "0.10", optional = true}

approx = "0.5"

[dev-dependencies]
criterion = "0.5"

glob = "0.3"
ndarray-npy = "0.9"
flate2 = "1.0.20"
time-graph = {version = "0.3.0", features = ["table", "json"]}


[[bench]]
name = "spherical-harmonics"
harness = false

[[bench]]
name = "lode-spherical-expansion"
harness = false
required-features = ["chemfiles"]

[[bench]]
name = "soap-spherical-expansion"
harness = false
required-features = ["chemfiles"]

[[bench]]
name = "soap-power-spectrum"
harness = false
required-features = ["chemfiles"]

[[example]]
name = "compute-soap"
required-features = ["chemfiles"]

[[example]]
name = "profiling"
required-features = ["chemfiles"]
